--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-native-firebase/app": "^16.4.1",
     "@react-native-firebase/auth": "^16.5.2",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
     "@reduxjs/toolkit": "^1.8.6",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "hermes-engine": "0.5.2-rc1",
     "moti": "^0.20.0",
     "react": "18.1.0",
