--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-gesture-handler": "^2.7.1",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^2.11.0",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.4.1",
