--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-redux": "^8.0.4"
+    "react-redux": "^8.0.4",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
